<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginLeft="10dp"
              android:layout_marginRight="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/notification_settings_button"
        android:text="@string/settings_notification_label"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:layout_gravity="center"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/app_info_button"
        android:text="@string/settings_app_info_label"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:layout_gravity="center"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/logout_button"
        android:text="@string/settings_logout_label"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:layout_gravity="center"/>

</LinearLayout>